--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.0.1",
     "icons": "^1.0.0",
